Fix bug affecting page alignment

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -94,7 +94,7 @@ button {
 
 /* Header */
 header {
-    background-color: #0e0b16;
+    background-color:  rgba(0, 0, 0, 0.8);
     color: #ffffff;
     padding: 10px 50px 0 10px;
     height: 70px;
@@ -140,6 +140,12 @@ header nav {
     margin-top: 20px;
 }
 
+#headerSpace{
+    width: 100vw;
+    height: 70px;
+    margin: 0;
+    padding: 10px 50px 0 10px;
+}
 
 /* Welcome text */
 #welcome {
@@ -163,10 +169,6 @@ header nav {
 
 
 /* Main Body */
-
-.main {
-   padding-top: 80px;
-}
 
 #side-bar {
     display: block;
@@ -265,10 +267,6 @@ footer {
         width: 90%;
         height: 2.5rem;
         margin: 0;
-    }
-
-    header {
-        padding-bottom: 20px;
     }
 
     label,
